[project]
name = "pylo"
version = "0.2.2"
description = "A custom logger module"
authors = [{name = "Sam", email = "samme.s90@gmail.com"}]
dependencies = []
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
